Commit: 자바스크립트 메모리 카드 게임 최종본 커밋

--- a/game.html
+++ b/game.html
@@ -24,10 +24,6 @@
 		<div class="timer">
 			00:00:00
 		</div>
-		<div class="btn-wrapper">
-			<button class="start-btn" type="button"><i class="fas fa-play"></i></button>
-			<button class="restart-btn" type="button"><i class="fas fa-redo-alt"></i></button>
-		</div>
 	</section>
 
 	<!-- card-section -->
@@ -45,12 +41,13 @@
 	</section>
 
 	<!-- modal popup -->
-	<!-- <div class="modal-wrapper">
+	<div class="modal-wrapper displayNone">
 		<div class="modal">
 			<h2>GAME OVER!</h2>
 			<span class="time-spent">TIME SPENT: </span>
-			<span class="time-record"></span>
+			<span class="time-record-span"></span>
+			<button class="restart-btn" type="button"><i class="fas fa-redo-alt"></i></button>
 		</div>
-	</div> -->
+	</div>
 </body>
 </html>
